--- a/Static/scss/_Structure.scss
+++ b/Static/scss/_Structure.scss
@@ -1,11 +1,14 @@
+body{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 //LOGIN
 #load { //SISTEMA DE CARGA
   width: 20em;
   height: fit-content;
-  position: absolute;
-  left: 50%;
-  top: 35%;
-  transform: translate(-50%, -50%);
+  top: 15%;
 
   display: flex;
   flex-direction: column;
@@ -89,10 +92,6 @@ header {
   #bars {
     span {
       transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
-      min-width: 100%;
-      min-height: 2px;
-      max-width: 100%;
-      max-height: 2px;
       background-color: black;
     }
 
@@ -102,7 +101,6 @@ header {
     .bars_active:nth-child(1) {
       @include bars(45deg, 3px, 7px)
     }
-
     .bars_active:nth-child(3) {
       @include bars(-45deg, -2px, -3px)
     }
@@ -110,40 +108,158 @@ header {
 }
 
 #TaskContainer {
+  .is-dragging {
+    scale: 0.95;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
+    background-color: rgba(234, 234, 234, 0.6) !important;
+  }
   .task {
+    #calendar{
+      max-width: 30px;
+      margin-left: auto;
+    }
     span{
       width: auto;
       white-space: nowrap;
       overflow: auto;
     }
-  }
-}
-//PROVISIONAL
-#calendar{
-  max-width: 30px;
-  margin-left: auto;
-}
-input[type="checkbox"]:checked{
-  background-color: #555;
-}
-input[type="checkbox"]{
-  border: 2px solid #ccc;
-  border-radius: 20px;
-  min-width: 20px;
-  min-height: 20px;
-  max-width: 20px;
-  max-height: 20px;
-  appearance: none;
 
-}
-.is-dragging {
-  scale: 0.95;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
-  background-color: rgb(203, 203, 203)!important;
-}
-* {
-  padding: 0;
-  margin: 0;
+   //IMPORTADO DE UIVERSE.IO-------------------------------------------------------------------------------
+    .checkbox-wrapper-12 {
+      position: relative;
+    }
+
+    .checkbox-wrapper-12 > svg {
+      position: absolute;
+      top: -130%;
+      left: -170%;
+      width: 110px;
+      pointer-events: none;
+    }
+
+    .checkbox-wrapper-12 * {
+      box-sizing: border-box;
+    }
+
+    .checkbox-wrapper-12 input[type="checkbox"] {
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      -webkit-tap-highlight-color: transparent;
+      cursor: pointer;
+      margin: 0;
+    }
+
+    .checkbox-wrapper-12 input[type="checkbox"]:focus {
+      outline: 0;
+    }
+
+    .checkbox-wrapper-12 .cbx {
+      width: 24px;
+      height: 24px;
+      top: calc(100px - 12px);
+      left: calc(100px - 12px);
+    }
+
+    .checkbox-wrapper-12 .cbx input {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 24px;
+      height: 24px;
+      border: 2px solid #bfbfc0;
+      border-radius: 50%;
+    }
+
+    .checkbox-wrapper-12 .cbx label {
+      width: 24px;
+      height: 24px;
+      background: none;
+      border-radius: 50%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform: translate3d(0, 0, 0);
+      pointer-events: none;
+    }
+
+    .checkbox-wrapper-12 .cbx svg {
+      position: absolute;
+      top: 5px;
+      left: 4px;
+      z-index: 1;
+      pointer-events: none;
+    }
+
+    .checkbox-wrapper-12 .cbx svg path {
+      stroke: #fff;
+      stroke-width: 3;
+      stroke-linecap: round;
+      stroke-linejoin: round;
+      stroke-dasharray: 19;
+      stroke-dashoffset: 19;
+      transition: stroke-dashoffset 0.3s ease;
+      transition-delay: 0.2s;
+    }
+
+    .checkbox-wrapper-12 .cbx input:checked + label {
+      animation: splash-12 0.6s ease forwards;
+    }
+
+    .checkbox-wrapper-12 .cbx input:checked + label + svg path {
+      stroke-dashoffset: 0;
+    }
+
+    @-moz-keyframes splash-12 {
+      40% {
+        background: #003cf9;
+        box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
+      }
+
+      100% {
+        background: #003cf9;
+        box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
+      }
+    }
+
+    @-webkit-keyframes splash-12 {
+      40% {
+        background: #003cf9;
+        box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
+      }
+
+      100% {
+        background: #003cf9;
+        box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
+      }
+    }
+
+    @-o-keyframes splash-12 {
+      40% {
+        background: #003cf9;
+        box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
+      }
+
+      100% {
+        background: #003cf9;
+        box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
+      }
+    }
+
+    @keyframes splash-12 {
+      40% {
+        background: #003cf9;
+        box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
+      }
+
+      100% {
+        background: #003cf9;
+        box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
+      }
+    }
+    //-------------------------------------------------------------------------
+
+  }
 }
 html{
   height: 100vh;
@@ -156,7 +272,7 @@ form {
   flex-wrap: nowrap;
   button {
     background-color: unset;
-    border: 0px;
+    border: 0;
     padding: 4px;
   }
   input[type="text"]{
