--- a/Static/css/style.css
+++ b/Static/css/style.css
@@ -1,13 +1,17 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap");
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 #load {
   width: 20em;
   height: fit-content;
-  position: absolute;
-  left: 50%;
-  top: 35%;
-  transform: translate(-50%, -50%);
+  top: 15%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -83,10 +87,6 @@ header #bars {
 }
 header #bars span {
   transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
-  min-width: 100%;
-  min-height: 2px;
-  max-width: 100%;
-  max-height: 2px;
   background-color: black;
 }
 header #bars .bars_active:nth-child(1) {
@@ -96,40 +96,132 @@ header #bars .bars_active:nth-child(3) {
   transform: rotate(-45deg) translate(-2px, -3px);
 }
 
+#TaskContainer .is-dragging {
+  scale: 0.95;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
+  background-color: rgba(234, 234, 234, 0.6) !important;
+}
+#TaskContainer .task #calendar {
+  max-width: 30px;
+  margin-left: auto;
+}
 #TaskContainer .task span {
   width: auto;
   white-space: nowrap;
   overflow: auto;
 }
-
-#calendar {
-  max-width: 30px;
-  margin-left: auto;
+#TaskContainer .task .checkbox-wrapper-12 {
+  position: relative;
 }
-
-input[type=checkbox]:checked {
-  background-color: #555;
+#TaskContainer .task .checkbox-wrapper-12 > svg {
+  position: absolute;
+  top: -130%;
+  left: -170%;
+  width: 110px;
+  pointer-events: none;
 }
-
-input[type=checkbox] {
-  border: 2px solid #ccc;
-  border-radius: 20px;
-  min-width: 20px;
-  min-height: 20px;
-  max-width: 20px;
-  max-height: 20px;
+#TaskContainer .task .checkbox-wrapper-12 * {
+  box-sizing: border-box;
+}
+#TaskContainer .task .checkbox-wrapper-12 input[type=checkbox] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
   appearance: none;
-}
-
-.is-dragging {
-  scale: 0.95;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
-  background-color: rgb(203, 203, 203) !important;
-}
-
-* {
-  padding: 0;
+  -webkit-tap-highlight-color: transparent;
+  cursor: pointer;
   margin: 0;
+}
+#TaskContainer .task .checkbox-wrapper-12 input[type=checkbox]:focus {
+  outline: 0;
+}
+#TaskContainer .task .checkbox-wrapper-12 .cbx {
+  width: 24px;
+  height: 24px;
+  top: 88px;
+  left: 88px;
+}
+#TaskContainer .task .checkbox-wrapper-12 .cbx input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 24px;
+  height: 24px;
+  border: 2px solid #bfbfc0;
+  border-radius: 50%;
+}
+#TaskContainer .task .checkbox-wrapper-12 .cbx label {
+  width: 24px;
+  height: 24px;
+  background: none;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate3d(0, 0, 0);
+  pointer-events: none;
+}
+#TaskContainer .task .checkbox-wrapper-12 .cbx svg {
+  position: absolute;
+  top: 5px;
+  left: 4px;
+  z-index: 1;
+  pointer-events: none;
+}
+#TaskContainer .task .checkbox-wrapper-12 .cbx svg path {
+  stroke: #fff;
+  stroke-width: 3;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-dasharray: 19;
+  stroke-dashoffset: 19;
+  transition: stroke-dashoffset 0.3s ease;
+  transition-delay: 0.2s;
+}
+#TaskContainer .task .checkbox-wrapper-12 .cbx input:checked + label {
+  animation: splash-12 0.6s ease forwards;
+}
+#TaskContainer .task .checkbox-wrapper-12 .cbx input:checked + label + svg path {
+  stroke-dashoffset: 0;
+}
+@-moz-keyframes splash-12 {
+  40% {
+    background: #003cf9;
+    box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
+  }
+  100% {
+    background: #003cf9;
+    box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
+  }
+}
+@-webkit-keyframes splash-12 {
+  40% {
+    background: #003cf9;
+    box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
+  }
+  100% {
+    background: #003cf9;
+    box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
+  }
+}
+@-o-keyframes splash-12 {
+  40% {
+    background: #003cf9;
+    box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
+  }
+  100% {
+    background: #003cf9;
+    box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
+  }
+}
+@keyframes splash-12 {
+  40% {
+    background: #003cf9;
+    box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
+  }
+  100% {
+    background: #003cf9;
+    box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
+  }
 }
 
 html {
@@ -145,7 +237,7 @@ form {
 }
 form button {
   background-color: unset;
-  border: 0px;
+  border: 0;
   padding: 4px;
 }
 form input[type=text] {
