--- a/Static/css/style.css
+++ b/Static/css/style.css
@@ -17,6 +17,7 @@ body {
   align-items: center;
 }
 #load span center {
+  text-rendering: optimizeLegibility;
   letter-spacing: 3px;
   font-family: "Lora", serif;
 }
@@ -28,6 +29,7 @@ body {
   animation: loadingText 1.5s 0s ease-in-out infinite;
 }
 #load #LoadingText span {
+  text-rendering: optimizeLegibility;
   margin-left: 30%;
   animation: Extends 2s steps(30);
   overflow: hidden;
@@ -76,6 +78,7 @@ body {
 
 header {
   height: 70px;
+  background-color: #67c7c3;
   /**
   Menu lateral izquierdo
    */
@@ -96,22 +99,45 @@ header #bars .bars_active:nth-child(3) {
   transform: rotate(-45deg) translate(-2px, -3px);
 }
 
+#TaskContainer {
+  margin-bottom: 45px;
+}
 #TaskContainer .is-dragging {
   scale: 0.95;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
   background-color: rgba(234, 234, 234, 0.6) !important;
 }
+#TaskContainer :hover > .checkbox-wrapper-12 input {
+  display: block !important;
+}
+#TaskContainer :hover {
+  background-color: rgb(240, 240, 240) !important;
+}
+#TaskContainer .task, #TaskContainer .task * {
+  transition: background-color 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+#TaskContainer .task {
+  border-radius: 0.8rem;
+  box-shadow: -3px 5px 10px rgba(0, 0, 0, 0.1);
+}
 #TaskContainer .task #calendar {
   max-width: 30px;
-  margin-left: auto;
+  min-width: 30px;
 }
 #TaskContainer .task span {
-  width: auto;
+  position: relative;
+  width: 100%;
   white-space: nowrap;
   overflow: auto;
+  text-rendering: optimizeLegibility;
+}
+#TaskContainer .task span:focus-visible {
+  outline: none;
+  border: unset;
 }
 #TaskContainer .task .checkbox-wrapper-12 {
   position: relative;
+  width: 24px !important;
 }
 #TaskContainer .task .checkbox-wrapper-12 > svg {
   position: absolute;
@@ -183,71 +209,45 @@ header #bars .bars_active:nth-child(3) {
 #TaskContainer .task .checkbox-wrapper-12 .cbx input:checked + label + svg path {
   stroke-dashoffset: 0;
 }
-@-moz-keyframes splash-12 {
-  40% {
-    background: #003cf9;
-    box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
-  }
-  100% {
-    background: #003cf9;
-    box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
-  }
-}
-@-webkit-keyframes splash-12 {
-  40% {
-    background: #003cf9;
-    box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
-  }
-  100% {
-    background: #003cf9;
-    box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
-  }
-}
-@-o-keyframes splash-12 {
-  40% {
-    background: #003cf9;
-    box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
-  }
-  100% {
-    background: #003cf9;
-    box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
-  }
-}
-@keyframes splash-12 {
-  40% {
-    background: #003cf9;
-    box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
-  }
-  100% {
-    background: #003cf9;
-    box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
-  }
-}
 
 html {
   height: 100vh;
 }
 
 body {
-  height: 100%;
+  height: fit-content;
 }
 
-form {
-  flex-wrap: nowrap;
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
 }
-form button {
+footer form {
+  border-radius: 0.8rem;
+  transition: all 0.5s;
+  width: 90%;
+  max-height: 45px;
+  flex-wrap: nowrap;
+  box-shadow: -3px 5px 10px rgba(0, 0, 0, 0.1);
+}
+footer form button {
   background-color: unset;
   border: 0;
   padding: 4px;
 }
-form input[type=text] {
+footer form input[type=text] {
   width: 100% !important;
   border: 0 !important;
   outline: none;
   overflow: auto;
   padding-right: 5px;
 }
-form svg[viewBox="0 0 36 36"] {
+footer form svg[viewBox="0 0 36 36"] {
   margin-left: auto !important;
   transform: translateX(-5px);
 }
@@ -373,27 +373,27 @@ form svg[viewBox="0 0 36 36"] {
 }
 
 .rounded-1 {
-  border-radius: 0.6rem !important;
+  border-radius: 0.2rem !important;
 }
 
 .rounded-2 {
-  border-radius: 0.9rem !important;
+  border-radius: 0.4rem !important;
 }
 
 .rounded-3 {
-  border-radius: 1.2rem !important;
+  border-radius: 0.8rem !important;
 }
 
 .rounded-4 {
-  border-radius: 0.9rem !important;
+  border-radius: 1.2rem !important;
 }
 
 .rounded-5 {
-  border-radius: 1.8rem !important;
+  border-radius: 1.5rem !important;
 }
 
 .rounded-6 {
-  border-radius: 2.1rem !important;
+  border-radius: 1.9rem !important;
 }
 
 .o-0 {
@@ -466,6 +466,50 @@ form svg[viewBox="0 0 36 36"] {
     transform: unset;
   }
 }
+@-moz-keyframes splash-12 {
+  40% {
+    background: #003cf9;
+    box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
+  }
+  100% {
+    background: #003cf9;
+    box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
+  }
+}
+@-webkit-keyframes splash-12 {
+  40% {
+    background: #003cf9;
+    box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
+  }
+  100% {
+    background: #003cf9;
+    box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
+  }
+}
+@-o-keyframes splash-12 {
+  40% {
+    background: #003cf9;
+    box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
+  }
+  100% {
+    background: #003cf9;
+    box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
+  }
+}
+@keyframes splash-12 {
+  40% {
+    background: #003cf9;
+    box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
+  }
+  100% {
+    background: #003cf9;
+    box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
+  }
+}
+.form_active {
+  box-shadow: 0 0 0 2px rgba(23, 78, 165, 0.3725490196), 0 0 0 5px rgba(59, 131, 246, 0.3725490196);
+}
+
 .glass-light {
   backdrop-filter: blur(2px);
   background-color: rgba(255, 255, 255, 0.5) !important;
@@ -479,12 +523,15 @@ form svg[viewBox="0 0 36 36"] {
 
 .bg-clear {
   filter: blur(100%);
-  background-color: rgb(240, 240, 240) !important;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  background-color: rgb(250, 249, 248) !important;
 }
 
 .bg-coffe {
-  background-color: rgba(242, 217, 165, 0.2);
+  background-color: rgba(242, 217, 165, 0.3);
+}
+
+.bg-white {
+  background-color: white;
 }
 
 /*# sourceMappingURL=style.css.map */
