--- a/Static/scss/_Referencials.scss
+++ b/Static/scss/_Referencials.scss
@@ -1,4 +1,4 @@
-$rounded: .6rem,.9rem,1.2rem,0.9rem,1.8rem,2.1rem;
+$rounded: .2rem,.4rem,.8rem,1.2rem,1.5rem,1.9rem;
 $rem: 0.5rem,1rem,1.5rem,2rem,2.5rem,3rem,3.5rem,4rem,4.5rem,5rem;
 @for $i from 1 through length($rem){
   $size: nth($rem, $n: $i);
