--- a/Static/scss/_Structure.scss
+++ b/Static/scss/_Structure.scss
@@ -15,6 +15,7 @@ body{
   align-items: center;
 
   span center {
+    text-rendering: optimizeLegibility;
     letter-spacing: 3px;
     font-family: 'Lora', serif;
   }
@@ -28,6 +29,7 @@ body{
     animation: loadingText 1.5s 0s ease-in-out infinite;
 
     span {
+      text-rendering: optimizeLegibility;
       margin-left: 30%;
       animation: Extends 2s steps(30);
       overflow: hidden;
@@ -86,6 +88,7 @@ body{
 //Menu Bars
 header {
   height: 70px;
+  background-color: #67c7c3;
   /**
   Menu lateral izquierdo
    */
@@ -108,27 +111,45 @@ header {
 }
 
 #TaskContainer {
+  margin-bottom: 45px;
   .is-dragging {
     scale: 0.95;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
     background-color: rgba(234, 234, 234, 0.6) !important;
   }
+  :hover > .checkbox-wrapper-12 input{
+    display: block!important;
+  }
+  :hover {
+    background-color:rgba(240, 240, 240, 1)!important;
+  }
+  .task,.task *{
+    transition: background-color 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+  }
   .task {
+    border-radius: 0.8rem;
+    box-shadow: -3px 5px 10px rgba(0,0,0,0.1);
     #calendar{
       max-width: 30px;
-      margin-left: auto;
+      min-width: 30px;
     }
     span{
-      width: auto;
+      position: relative;
+      width: 100%;
       white-space: nowrap;
       overflow: auto;
+      text-rendering: optimizeLegibility;
+    }
+    span:focus-visible{
+      outline: none;
+      border: unset;
     }
 
    //IMPORTADO DE UIVERSE.IO-------------------------------------------------------------------------------
     .checkbox-wrapper-12 {
       position: relative;
+      width: 24px!important;
     }
-
     .checkbox-wrapper-12 > svg {
       position: absolute;
       top: -130%;
@@ -209,81 +230,46 @@ header {
     .checkbox-wrapper-12 .cbx input:checked + label + svg path {
       stroke-dashoffset: 0;
     }
-
-    @-moz-keyframes splash-12 {
-      40% {
-        background: #003cf9;
-        box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
-      }
-
-      100% {
-        background: #003cf9;
-        box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
-      }
-    }
-
-    @-webkit-keyframes splash-12 {
-      40% {
-        background: #003cf9;
-        box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
-      }
-
-      100% {
-        background: #003cf9;
-        box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
-      }
-    }
-
-    @-o-keyframes splash-12 {
-      40% {
-        background: #003cf9;
-        box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
-      }
-
-      100% {
-        background: #003cf9;
-        box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
-      }
-    }
-
-    @keyframes splash-12 {
-      40% {
-        background: #003cf9;
-        box-shadow: 0 -18px 0 -8px #003cf9, 16px -8px 0 -8px #003cf9, 16px 8px 0 -8px #003cf9, 0 18px 0 -8px #003cf9, -16px 8px 0 -8px #003cf9, -16px -8px 0 -8px #003cf9;
-      }
-
-      100% {
-        background: #003cf9;
-        box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
-      }
-    }
-    //-------------------------------------------------------------------------
-
+  //------------------------------------------------------
   }
 }
 html{
   height: 100vh;
 }
 body{
-  height: 100%;
+  height: fit-content;
 }
 
-form {
-  flex-wrap: nowrap;
-  button {
-    background-color: unset;
-    border: 0;
-    padding: 4px;
-  }
-  input[type="text"]{
-    width: 100%!important;
-    border: 0!important;
-    outline: none;
-    overflow: auto;
-    padding-right: 5px;
-  }
-  svg[viewBox="0 0 36 36"]{
-    margin-left: auto!important;
-    transform: translateX(-5px);
+footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  form {
+    border-radius: 0.8rem;
+    transition: all .5s ;
+    width: 90%;
+    max-height: 45px;
+    flex-wrap: nowrap;
+    box-shadow: -3px 5px 10px rgba(0,0,0,0.1);
+    button {
+      background-color: unset;
+      border: 0;
+      padding: 4px;
+    }
+    input[type="text"]{
+      width: 100%!important;
+      border: 0!important;
+      outline: none;
+      overflow: auto;
+      padding-right: 5px;
+    }
+    svg[viewBox="0 0 36 36"]{
+      margin-left: auto!important;
+      transform: translateX(-5px);
+    }
   }
 }
