--- a/Templates/Index.html
+++ b/Templates/Index.html
@@ -11,20 +11,24 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="bg-clear">
 
+    <ul>
+        <li class=""></li>
+    </ul>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-<script src="../Static/JS/Drag.js"></script>
+<script src="../Static/JS/External/lottie.js" type="text/javascript"></script>
+<script src="../Static/JS/External/Drag.js"></script>
+<script src="../Static/JS/Controller/ControllerList.js"></script>
 <script src="../Static/JS/Task.js"></script>
 <script src="../Static/JS/List.js"></script>
 <script src="../Static/JS/Login.js"></script>
 <script type="text/javascript">
-    let currentList="Home"
     let login = new Login(document.body)
-    let list = new List(currentList)
-    login.show(list)
+    let constrollerList=new ControllerList("Home");
+    login.show(constrollerList)
 </script>
 </html>
