--- a/Static/scss/_Mixins.scss
+++ b/Static/scss/_Mixins.scss
@@ -1,3 +1,6 @@
 @mixin bars($angle,$translate...){
   transform: rotate($angle) translate($translate...);
 }
+@mixin max-height($px){
+  max-height: $px;
+}
