--- a/Templates/Index.html
+++ b/Templates/Index.html
@@ -13,9 +13,6 @@
 
 <body class="bg-clear">
 
-    <ul>
-        <li class=""></li>
-    </ul>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -23,9 +20,9 @@
 <script src="../Static/JS/External/lottie.js" type="text/javascript"></script>
 <script src="../Static/JS/External/Drag.js"></script>
 <script src="../Static/JS/Controller/ControllerList.js"></script>
-<script src="../Static/JS/Task.js"></script>
-<script src="../Static/JS/List.js"></script>
-<script src="../Static/JS/Login.js"></script>
+<script src="../Static/JS/Model/Task.js"></script>
+<script src="../Static/JS/Model/List.js"></script>
+<script src="../Static/JS/Model/Login.js"></script>
 <script type="text/javascript">
     let login = new Login(document.body)
     let constrollerList=new ControllerList("Home");
