--- a/Static/scss/_Structure.scss
+++ b/Static/scss/_Structure.scss
@@ -1,9 +1,10 @@
-body{
+body {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
 //LOGIN
 #load { //SISTEMA DE CARGA
   width: 20em;
@@ -94,6 +95,7 @@ header {
    */
   #bars {
     cursor: pointer;
+
     span {
       transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
       background-color: black;
@@ -105,6 +107,7 @@ header {
     .bars_active:nth-child(1) {
       @include bars(45deg, 3px, 7px)
     }
+
     .bars_active:nth-child(3) {
       @include bars(-45deg, -2px, -3px)
     }
@@ -113,47 +116,58 @@ header {
 
 #TaskContainer {
   margin-bottom: 45px;
+
   .is-dragging {
     scale: 0.95;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
     background-color: rgba(234, 234, 234, 0.6) !important;
   }
-  :hover > .checkbox-wrapper-12 input{
-    display: block!important;
+
+  :hover > .checkbox-wrapper-12 input {
+    display: block !important;
   }
+
   :hover {
-    background-color:rgba(240, 240, 240, 1)!important;
+    background-color: rgba(240, 240, 240, 1) !important;
   }
+
   [tabindex="0"] {
-    background-color:rgba(240, 240, 240, 1)!important;
+    background-color: rgba(240, 240, 240, 1) !important;
   }
-  .task,.task *{
+
+  .task, .task * {
     transition: background-color 1s cubic-bezier(0.075, 0.82, 0.165, 1);
   }
+
   .task {
     border-radius: 0.8rem;
-    box-shadow: -3px 5px 10px rgba(0,0,0,0.1);
+    box-shadow: -3px 5px 10px rgba(0, 0, 0, 0.1);
     position: relative;
-    #calendar{
+
+    #calendar {
       max-width: 30px;
       min-width: 30px;
     }
-    span{
+
+    span {
       position: relative;
       width: 100%;
       white-space: nowrap;
       overflow: auto;
       text-rendering: optimizeLegibility;
     }
-    span:focus-visible{
+
+    span:focus-visible {
       outline: none;
       border: unset;
     }
-   //-----------IMPORTADO DE UIVERSE.IO-------------------------------------------------------------------------------
+
+    //-----------IMPORTADO DE UIVERSE.IO-------------------------------------------------------------------------------
     .checkbox-wrapper-12 {
       position: relative;
-      width: 24px!important;
+      width: 24px !important;
     }
+
     .checkbox-wrapper-12 > svg {
       position: absolute;
       top: -130%;
@@ -234,18 +248,20 @@ header {
     .checkbox-wrapper-12 .cbx input:checked + label + svg path {
       stroke-dashoffset: 0;
     }
-  //------------------------------------------------------
+
+    //------------------------------------------------------
   }
 }
 
-html{
+html {
   height: 100vh;
 }
-body{
+
+body {
   height: fit-content;
 }
 
-footer{
+footer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -253,55 +269,106 @@ footer{
   bottom: 0;
   width: 100%;
   height: 60px;
+
   form {
     border-radius: 0.8rem;
-    transition: all .5s ;
+    transition: all .5s;
     width: 90%;
     max-height: 45px;
     flex-wrap: nowrap;
-    box-shadow: -3px 5px 10px rgba(0,0,0,0.1);
+    box-shadow: -3px 5px 10px rgba(0, 0, 0, 0.1);
+
     button {
       background-color: unset;
       border: 0;
       padding: 4px;
     }
-    input[type="text"]{
-      width: 100%!important;
-      border: 0!important;
+
+    input[type="text"] {
+      width: 100% !important;
+      border: 0 !important;
       outline: none;
       overflow: auto;
       padding-right: 5px;
     }
-    svg[viewBox="0 0 36 36"]{
-      margin-left: auto!important;
+
+    svg[viewBox="0 0 36 36"] {
+      margin-left: auto !important;
       transform: translateX(-5px);
     }
   }
 }
 
 
-nav{
-  height: 0;
-  max-height: 40px;
-  transition: height .4s 0s linear;
-  ul{
+nav {
+  ul {
     padding: 0;
     margin-bottom: 0;
-    li{
-      cursor: pointer;
-      max-height:40px;
-      .container-svg{
-        @include max-height(40px)
+
+    #search div {
+      display: flex;
+      line-height: 28px;
+      align-items: center;
+      position: relative;
+      max-width: 190px;
+
+      .input {
+        width: 100%;
+        height: 40px;
+        line-height: 28px;
+        padding: 0 1rem 0 2.5rem;
+        border: 2px solid transparent;
+        border-radius: 8px;
+        outline: none;
+        background-color: #f3f3f4;
+        color: #0d0c22;
+        transition: .3s ease;
+      }
+
+      .input::placeholder {
+        color: #9e9ea7;
+      }
+
+      .input:focus, input:hover {
+        outline: none;
+        cursor: text;
+        box-shadow: 0 0 0 2px #174ea55f, 0 0 0 5px #3b83f65f;
+        background-color: #fff;
+      }
+
+      .icon {
+        position: absolute;
+        left: 1rem;
+        fill: #9e9ea7;
+        width: 1rem;
+        height: 1rem;
       }
     }
-    #delete{
-      display: none!important;
+
+    li {
+      max-height: 40px;
+
+      * {
+        cursor: pointer;
+      }
+
+      position: relative;
+      .container-svg {
+        @include max-height(40px);
+        width: 100%;
+      }
     }
   }
 }
-.navActive{
-  height: 40px!important;
-  #delete{
-    display: block!important;
-  }
+
+
+#delete {
+  height: 0;
+  width: 40px;
+  max-height: 40px;
+  transition: height .4s 0s linear;
 }
+.navActive {
+  height: 40px !important;
+}
+
