--- a/Static/scss/_Structure.scss
+++ b/Static/scss/_Structure.scss
@@ -4,9 +4,11 @@ body {
   justify-content: center;
   align-items: center;
 }
-li{
+
+li {
   list-style: none;
 }
+
 //LOGIN
 #load { //SISTEMA DE CARGA
   width: 20em;
@@ -44,6 +46,7 @@ li{
       letter-spacing: 0px;
       padding: 0;
       font-style: italic;
+
       p {
         font-weight: 800;
         animation: pointsShake 1.5s infinite;
@@ -354,6 +357,7 @@ nav {
       }
 
       position: relative;
+
       .container-svg {
         @include max-height(40px);
         width: 100%;
@@ -369,7 +373,47 @@ nav {
   max-height: 40px;
   transition: height .4s 0s linear;
 }
+
 .navActive {
   height: 40px !important;
 }
 
+//Componente menuList
+#contains{
+  #menuList {
+    height: 100vh;
+    width: fit-content;
+    max-width: 70vw;
+    position: fixed;
+    left: -200px;
+    z-index: 1;
+    background-color: rgb(103, 199, 195, .7);
+    backdrop-filter: blur(10px);
+    transition: left .4s 0s linear;
+    overflow: auto;
+  }
+  .active {
+    left: 0!important;
+  }
+  #addList{
+    max-height: 50px;
+    div{
+      width: 100%;
+      height: 100%;
+      button {
+        background-color: unset;
+        border: 0;
+        padding: 4px;
+      }
+
+      input[type="text"] {
+        width: 100% !important;
+        border: 0 !important;
+        border-radius: 5px;
+        outline: none;
+        overflow: auto;
+        padding-right: 5px;
+      }
+    }
+  }
+}
