--- a/Templates/index.html
+++ b/Templates/index.html
@@ -19,6 +19,7 @@
         crossorigin="anonymous"></script>
 <script src="../Static/JS/ExternalJS/lottie.js" type="text/javascript"></script>
 <script src="../Static/JS/ExternalJS/Drag.js"></script>
+<script src="../Static/JS/Model/Domain/SvgList.js"></script>
 <script src="../Static/JS/Model/DAO/ListDAO.js"></script>
 <script src="../Static/JS/Model/DAO/TasksDAO.js"></script>
 <script  src="../Static/JS/Controller/ControllerList.js"></script>
