--- a/Static/css/style.css
+++ b/Static/css/style.css
@@ -328,7 +328,7 @@ nav ul li .container-svg {
 
 #contains #menuList {
   max-height: calc(100vh - 70px);
-  width: fit-content;
+  width: 0;
   position: relative;
   max-width: 200px;
   left: -200px;
@@ -348,8 +348,9 @@ nav ul li .container-svg {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-#contains .active {
+#contains div .active {
   left: 0 !important;
+  width: fit-content !important;
 }
 #contains #addList {
   max-height: 50px;
@@ -652,6 +653,20 @@ nav ul li .container-svg {
 
 .bg-white {
   background-color: white;
+}
+
+@media (min-width: 768px) {
+  header #bars {
+    display: none !important;
+  }
+  header #sticky {
+    display: none;
+  }
+  #menuList {
+    transition: none !important;
+    left: 0 !important;
+    min-width: 200px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
