--- a/Static/scss/Background.scss
+++ b/Static/scss/Background.scss
@@ -17,3 +17,7 @@
 .bg-white{
   background-color: white;
 }
+.primary{
+  background-color: rgb(103, 199, 195, .7)!important;
+  backdrop-filter: blur(10px)!important;
+}
