--- a/Static/scss/_Structure.scss
+++ b/Static/scss/_Structure.scss
@@ -93,8 +93,6 @@ li {
 //Menu Bars
 header {
   height: 70px;
-  background-color: rgb(103, 199, 195, .7);
-  backdrop-filter: blur(10px);
   /**
   Menu lateral izquierdo
    */
@@ -124,7 +122,10 @@ section {
   width: 100%;
   overflow: auto;
   max-height: calc(100vh - 130px);
+
   #TaskContainer {
+    align-items: center;
+
     .is-dragging {
       scale: 0.95;
       box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
@@ -157,7 +158,7 @@ section {
         min-width: 30px;
       }
 
-      span {
+      div:first-child ~ span {
         position: relative;
         width: 100%;
         white-space: nowrap;
@@ -174,6 +175,7 @@ section {
       .checkbox-wrapper-12 {
         position: relative;
         width: 24px !important;
+        display: grid;
       }
 
       .checkbox-wrapper-12 > svg {
@@ -204,8 +206,8 @@ section {
       .checkbox-wrapper-12 .cbx {
         width: 24px;
         height: 24px;
-        top: calc(100px - 12px);
-        left: calc(100px - 12px);
+        top: 20%;
+        position: relative;
       }
 
       .checkbox-wrapper-12 .cbx input {
@@ -313,43 +315,48 @@ nav {
     padding: 0;
     margin-bottom: 0;
 
-    #search div {
-      display: flex;
-      line-height: 28px;
-      align-items: center;
+    #search {
+      width: calc(50% + 100px);
       position: relative;
-      max-width: 190px;
 
-      .input {
-        width: 100%;
-        height: 40px;
+      div {
+        display: flex;
         line-height: 28px;
-        padding: 0 1rem 0 2.5rem;
-        border: 2px solid transparent;
-        border-radius: 8px;
-        outline: none;
-        background-color: #f3f3f4;
-        color: #0d0c22;
-        transition: .3s ease;
-      }
+        align-items: center;
+        position: relative;
+        max-width: 190px;
 
-      .input::placeholder {
-        color: #9e9ea7;
-      }
+        .input {
+          width: 100%;
+          height: 40px;
+          line-height: 28px;
+          padding: 0 1rem 0 2.5rem;
+          border: 2px solid transparent;
+          border-radius: 8px;
+          outline: none;
+          background-color: #f3f3f4;
+          color: #0d0c22;
+          transition: .3s ease;
+        }
 
-      .input:focus, input:hover {
-        outline: none;
-        cursor: text;
-        box-shadow: 0 0 0 2px #174ea55f, 0 0 0 5px #3b83f65f;
-        background-color: #fff;
-      }
+        .input::placeholder {
+          color: #9e9ea7;
+        }
 
-      .icon {
-        position: absolute;
-        left: 1rem;
-        fill: #9e9ea7;
-        width: 1rem;
-        height: 1rem;
+        .input:focus, input:hover {
+          outline: none;
+          cursor: text;
+          box-shadow: 0 0 0 2px #174ea55f, 0 0 0 5px #3b83f65f;
+          background-color: #fff;
+        }
+
+        .icon {
+          position: absolute;
+          left: 1rem;
+          fill: #9e9ea7;
+          width: 1rem;
+          height: 1rem;
+        }
       }
     }
 
@@ -391,16 +398,17 @@ nav {
     max-width: 200px;
     left: -200px;
     z-index: 1;
-    background-color: rgb(103, 199, 195, .7);
-    backdrop-filter: blur(10px);
     transition: left .4s 0s linear;
     overflow: auto;
 
     li {
+      justify-content: space-between;
+      align-items: center;
       border-radius: 5px;
       position: relative;
       cursor: pointer;
       max-width: 200px;
+      white-space: nowrap !important;
 
       span:first-child {
         overflow: hidden;
@@ -411,7 +419,7 @@ nav {
 
   div .active {
     left: 0 !important;
-    width: fit-content!important;
+    width: fit-content !important;
   }
 
   #addList {
@@ -439,8 +447,39 @@ nav {
   }
 }
 
-#contextMenu {
-  li {
+.task {
+  div {
+    padding: 0;
+  }
+}
 
+.TaskNote {
+  height: 0 !important;
+  overflow: hidden;
+  transition: height .6s 0s linear !important;
+}
+
+.task[tabindex="0"] .TaskNote {
+  position: relative;
+  overflow: auto;
+  height: fit-content !important;
+  min-height: 40px;
+  filter: opacity(0.5);
+
+  div {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    word-break: break-word;
+    gap: 10px;
+
+    p {
+      color: #999999;
+    }
+
+    span {
+      grid-auto-rows: auto;
+      word-wrap: break-word;
+      white-space: pre-wrap;
+    }
   }
 }
