--- a/Static/css/style.css
+++ b/Static/css/style.css
@@ -233,7 +233,11 @@ body {
   height: fit-content;
 }
 
-footer {
+#centerPanel {
+  position: relative;
+}
+#centerPanel footer {
+  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -241,7 +245,7 @@ footer {
   width: 100%;
   height: 60px;
 }
-footer form {
+#centerPanel footer form {
   border-radius: 0.8rem;
   transition: all 0.5s;
   width: 90%;
@@ -249,19 +253,19 @@ footer form {
   flex-wrap: nowrap;
   box-shadow: -3px 5px 10px rgba(0, 0, 0, 0.1);
 }
-footer form button {
+#centerPanel footer form button {
   background-color: unset;
   border: 0;
   padding: 4px;
 }
-footer form input[type=text] {
+#centerPanel footer form input[type=text] {
   width: 100% !important;
   border: 0 !important;
   outline: none;
   overflow: auto;
   padding-right: 5px;
 }
-footer form svg[viewBox="0 0 36 36"] {
+#centerPanel footer form svg[viewBox="0 0 36 36"] {
   margin-left: auto !important;
   transform: translateX(-5px);
 }
@@ -387,14 +391,13 @@ nav ul li .container-svg {
 .TaskNote {
   height: 0 !important;
   overflow: hidden;
-  transition: height 0.6s 0s linear !important;
 }
 
 .task[tabindex="0"] .TaskNote {
   position: relative;
   overflow: auto;
   height: fit-content !important;
-  min-height: 40px;
+  min-height: 40px !important;
   filter: opacity(0.5);
 }
 .task[tabindex="0"] .TaskNote div {
@@ -670,6 +673,17 @@ nav ul li .container-svg {
   box-shadow: 0 0 0 2px rgba(23, 78, 165, 0.3725490196), 0 0 0 5px rgba(59, 131, 246, 0.3725490196);
 }
 
+@keyframes perfilOptionsShake {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-45%);
+  }
+  100% {
+    transform: unset;
+  }
+}
 .glass-light {
   backdrop-filter: blur(2px);
   background-color: rgba(255, 255, 255, 0.5) !important;
