--- a/Static/scss/_Structure.scss
+++ b/Static/scss/_Structure.scss
@@ -120,9 +120,8 @@ header {
 section {
   max-width: 100%;
   width: 100%;
-  overflow: auto;
   max-height: calc(100vh - 130px);
-
+  overflow: initial;
   #TaskContainer {
     align-items: center;
 
@@ -317,7 +316,6 @@ nav {
   ul {
     padding: 0;
     margin-bottom: 0;
-
     #search {
       width: calc(50% + 100px);
       position: relative;
@@ -374,22 +372,9 @@ nav {
 
       .container-svg {
         @include max-height(40px);
-        width: 100%;
       }
     }
   }
-}
-
-
-#delete {
-  height: 0;
-  width: 40px;
-  max-height: 40px;
-  transition: height .4s 0s linear;
-}
-
-.navActive {
-  height: 40px !important;
 }
 
 //Componente menuList
@@ -450,12 +435,7 @@ nav {
   }
 }
 
-.task {
-  div {
-    padding: 0;
-  }
-}
-
+//NOTAS
 .TaskNote {
   height: 0 !important;
   overflow: hidden;
@@ -485,3 +465,128 @@ nav {
     }
   }
 }
+
+//Menu seleccionable NAV {
+
+#pointsOptions {
+  width: 35px;
+  transform: scale(0.7);
+  overflow: visible;
+  cursor: pointer;
+}
+
+#pointsOptions:hover #Circle1 {
+  animation: perfilOptionsShake 0.5s 0s both;
+}
+
+#pointsOptions:hover #Circle2 {
+  animation: perfilOptionsShake 0.5s 0.2s both;
+}
+
+#pointsOptions:hover #Circle3 {
+  animation: perfilOptionsShake 0.5s 0.4s both;
+}
+#navMenu:checked ~ #menuContext{
+  top: 30px;
+  padding: .5rem;
+  border-radius: 8px;
+  background-color: rgb(255, 255, 255,.7);
+  min-width: max-content;
+  z-index: 10000;
+  visibility: visible;
+  height: auto!important;
+}
+
+#menuContext {
+  height: 0;
+  visibility: hidden;
+  position: absolute;
+  display: flex;
+  flex-direction: row-reverse;
+  ul {
+    display: flex;
+    @for $i from 1 through 2 {
+      li:nth-child(#{$i}) {
+        @if $i != 2 {
+          border-bottom: 1px solid rgb(8, 0, 8, 0.2);
+          transform: translateY(2px);
+        }
+      }
+    }
+    li {
+      padding: 2px 5px 2px 5px;
+      max-height: 30px !important;
+      font-weight: 300;
+      font-family: serif;
+      .container-svg {
+        transform: translate(-5px, -2px);
+        position: relative;
+        svg {
+          transform: unset !important;
+          max-height: 30px;
+          min-height: 30px;
+        }
+      }
+    }
+    #selectAll {
+      //SELECT ALL
+      position: relative;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      p {
+        margin: 0;
+      }
+
+      .checkbox {
+        display: inline-flex;
+        align-items: center;
+        cursor: pointer;
+      }
+
+      .checkbox input[type="checkbox"] {
+        opacity: 0;
+        position: absolute;
+      }
+
+      .checkbox .checkmark {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        width: 20px;
+        height: 20px;
+        border: 1px solid #ccc;
+        border-radius: 50%;
+        transition: background-color 0.2s ease;
+      }
+
+      .checkbox input[type="checkbox"]:checked + .checkmark {
+        background-color: #0078d4;
+        border-color: #0078d4;
+      }
+
+      .checkbox input[type="checkbox"]:checked + .checkmark:after {
+        content: "";
+        display: block;
+        width: 6px;
+        height: 6px;
+        border-radius: 50%;
+        background-color: #fff;
+        transition: transform 0.2s ease;
+        transform: scale(1);
+      }
+
+      .checkbox .checkmark:after {
+        content: "";
+        display: block;
+        width: 6px;
+        height: 6px;
+        border-radius: 50%;
+        background-color: transparent;
+        transform: scale(0);
+        transition: transform 0.2s ease;
+      }
+    }
+  }
+}
+// }
