--- a/Static/scss/_Animation.scss
+++ b/Static/scss/_Animation.scss
@@ -110,7 +110,7 @@
 //-------------------------------------------------------------------------
 //borde para inputs con 2 tonalidades de azul. Agrega efecto de seleccionado
 .form_active{
-  box-shadow: 0 0 0 2px #174ea55f, 0 0 0 5px #3b83f65f;
+  box-shadow: 0 0 0 2px #174ea55f, 0 0 0 5px #3b83f65f!important;
 }
 
 
