--- a/Static/scss/_Structure.scss
+++ b/Static/scss/_Structure.scss
@@ -120,8 +120,9 @@ header {
 section {
   max-width: 100%;
   width: 100%;
+  overflow: auto;
   max-height: calc(100vh - 130px);
-  overflow: initial;
+
   #TaskContainer {
     align-items: center;
 
