--- a/Static/css/style.css
+++ b/Static/css/style.css
@@ -235,6 +235,7 @@ body {
 
 #centerPanel {
   position: relative;
+  background-color: aliceblue;
 }
 #centerPanel footer {
   position: absolute;
@@ -325,7 +326,7 @@ nav ul li .container-svg {
 }
 
 #contains #menuList {
-  max-height: calc(100vh - 70px);
+  max-height: calc(100vh - 86px);
   width: 0;
   position: relative;
   max-width: 200px;
@@ -347,7 +348,7 @@ nav ul li .container-svg {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-#contains div .active {
+#contains .active {
   left: 0 !important;
   width: fit-content !important;
 }
@@ -439,9 +440,14 @@ nav ul li .container-svg {
 #menuContext ul {
   display: flex;
 }
-#menuContext ul li:nth-child(1) {
-  border-bottom: 1px solid rgba(8, 0, 8, 0.2);
-  transform: translateY(2px);
+#menuContext ul .active {
+  left: unset !important;
+  width: auto !important;
+  min-width: unset !important;
+  display: flex !important;
+}
+#menuContext ul #delete {
+  display: none;
 }
 #menuContext ul li {
   padding: 2px 5px 2px 5px;
@@ -509,6 +515,15 @@ nav ul li .container-svg {
   background-color: transparent;
   transform: scale(0);
   transition: transform 0.2s ease;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
 .fs-1 {
@@ -814,6 +829,9 @@ nav ul li .container-svg {
 }
 
 @media (min-width: 768px) {
+  #contains {
+    padding: 0.5rem !important;
+  }
   header #bars {
     display: none !important;
   }
@@ -821,7 +839,7 @@ nav ul li .container-svg {
     display: none;
   }
   #centerPanel {
-    border-radius: 15px 15px 0 0 !important;
+    border-radius: 15px !important;
   }
   #menuList {
     transition: none !important;
