--- a/Static/scss/_Structure.scss
+++ b/Static/scss/_Structure.scss
@@ -273,6 +273,7 @@ body {
 }
 #centerPanel{
   position: relative;
+  background-color: aliceblue;
   footer {
     position: absolute;
     display: flex;
@@ -381,7 +382,7 @@ nav {
 //Componente menuList
 #contains {
   #menuList {
-    max-height: calc(100vh - 70px);
+    max-height: calc(100vh - 86px);
     width: 0;
     position: relative;
     max-width: 200px;
@@ -406,7 +407,7 @@ nav {
     }
   }
 
-  div .active {
+  .active {
     left: 0 !important;
     width: fit-content !important;
   }
@@ -506,13 +507,14 @@ nav {
   flex-direction: row-reverse;
   ul {
     display: flex;
-    @for $i from 1 through 2 {
-      li:nth-child(#{$i}) {
-        @if $i != 2 {
-          border-bottom: 1px solid rgb(8, 0, 8, 0.2);
-          transform: translateY(2px);
-        }
-      }
+    .active{
+      left: unset!important;
+      width: auto!important;
+      min-width: unset!important;
+      display: flex!important;
+    }
+    #delete{
+      display: none;
     }
     li {
       padding: 2px 5px 2px 5px;
@@ -591,3 +593,11 @@ nav {
   }
 }
 // }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
