--- a/Templates/index.html
+++ b/Templates/index.html
@@ -26,6 +26,9 @@
 <script src="../Static/JS/Model/Domain/Task.js"></script>
 <script src="../Static/JS/Model/Domain/List.js"></script>
 <script src="../Static/JS/Model/Domain/Login.js"></script>
+<script src="../Static/JS/Model/components/Calendar/Calendar.js"></script>
+<script src="../Static/JS/Model/components/Calendar/CalendarController.js"></script>
+<script  type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script type="text/javascript">
     let login = new Login(document.body)
     if(ListDAO.searchList('My Tasks')===null){
