--- a/Static/css/style.css
+++ b/Static/css/style.css
@@ -526,6 +526,43 @@ nav ul li .container-svg {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
+.calendar {
+  max-width: 350px;
+}
+.calendar .header-days {
+  font-family: "Lora", serif;
+  margin-bottom: 10px;
+}
+.calendar .calendar-body .day-cell {
+  border: 1px solid black;
+  border-radius: 50px;
+  width: 35px;
+  padding: 5px;
+  font-family: "Lora", serif;
+  cursor: pointer;
+}
+.calendar .calendar-body .day-cell-disable {
+  color: gray;
+  border: unset;
+}
+.calendar .calendar-body .day-cell-active {
+  background-color: rgba(111, 208, 203, 0.5);
+}
+.calendar .grid {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-row-gap: 10px;
+  text-align: center;
+  justify-items: center;
+}
+.calendar .control {
+  cursor: pointer;
+}
+.calendar .calendar-header span {
+  font-size: 1.5rem;
+  font-family: "Lora", serif;
+}
+
 .fs-1 {
   font-size: 0.5rem !important;
 }
